# hello_world

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  run.sh
source/: main.cpp  main2.cpp  main_mpi.cpp
source/hello/: hello.cpp  hello.hpp
